// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should AuthScreen render correctly With Autorization 1`] = `
<div
  className="user-block"
>
  <div
    className="user-block__avatar"
  >
    <a
      href="/mylist"
      onClick={[Function]}
    >
      <img
        alt="User avatar"
        height="63"
        width="63"
      />
    </a>
  </div>
</div>
`;

exports[`Should AuthScreen render correctly Without Autorization 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__link"
    href="/login"
    onClick={[Function]}
  >
    Sign in
  </a>
</div>
`;
